# kryos

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
docker/: Dockerfile
docs/: getting-started.md
docs/api/: README.md
docs/deployment/: README.md
docs/models/: README.md
