[tool.poetry]
name = "kryos"
version = "0.1.0"
description = "Next-generation AI-powered cryptocurrency analysis and prediction platform"
authors = ["Kryos Team <team@kryos.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
pytorch = "^2.1.1"
transformers = "^4.35.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiohttp = "^3.9.1"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
ccxt = "^4.1.13"
websockets = "^12.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"] 